fix page shift when toggle form

--- a/client/src/sass/components/_reminder.scss
+++ b/client/src/sass/components/_reminder.scss
@@ -21,8 +21,6 @@
   width: 100%;
   // margin: 0 auto;
   position: absolute;
-  z-index: 1;
-
   &-navigation {
     display: flex;
     height: 6rem;
@@ -44,10 +42,10 @@
   &-form_container {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 94%;
     justify-content: center;
     position: absolute;
-    z-index: 100;
+    // z-index: 100;
   }
   &-radios_menu {
     height: 25%;
