--- a/client/src/sass/components/reminders/_reminderhome.scss
+++ b/client/src/sass/components/reminders/_reminderhome.scss
@@ -24,6 +24,7 @@
 .rList {
   width: 40%;
   background-color: #f5f5f5;
+  padding: 0 0.6rem 0 0;
 }
 .rType {
   height: 6rem;
@@ -35,7 +36,7 @@
 }
 
 .rCard {
-  height: 6rem;
+  height: 7rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
