--- a/client/src/sass/main.css
+++ b/client/src/sass/main.css
@@ -1063,8 +1063,7 @@ e,'s are considered best option for media queries
   height: 100%;
   display: flex;
   width: 100%;
-  position: absolute;
-  z-index: 1; }
+  position: absolute; }
   .reminder-navigation {
     display: flex;
     height: 6rem;
@@ -1081,10 +1080,9 @@ e,'s are considered best option for media queries
   .reminder-form_container {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 94%;
     justify-content: center;
-    position: absolute;
-    z-index: 100; }
+    position: absolute; }
   .reminder-radios_menu {
     height: 25%;
     width: 18rem;
@@ -1478,7 +1476,8 @@ e,'s are considered best option for media queries
 
 .rList {
   width: 40%;
-  background-color: #f5f5f5; }
+  background-color: #f5f5f5;
+  padding: 0 0.6rem 0 0; }
 
 .rType {
   height: 6rem;
@@ -1488,7 +1487,7 @@ e,'s are considered best option for media queries
   font-size: 22px; }
 
 .rCard {
-  height: 6rem;
+  height: 7rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
